--- a/templates/teste/base.html
+++ b/templates/teste/base.html
@@ -16,8 +16,8 @@
     </style>
   </head>
   <body class='text-light' style="background-image: url('static/img/yin_yang.png')">
-    <h1>Assuntos de meu interesse</h1>
-
+    <h1>Assuntos do meu interesse</h1>
+    <div class="container">
     <p class="d-inline-flex gap-1">
         <a class="btn btn-primary ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
           Psicologia Analítica
@@ -92,6 +92,7 @@
           <img class="mt-3" src="static/img/mandala.jpg" style="width: 300px; height: 200px;" alt="Mandala">
          
         </div>
+      </div>
       </div>
     
       {% block content %}
