--- a/templates/teste/base.html
+++ b/templates/teste/base.html
@@ -3,102 +3,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Sistema, RB_Soft</title>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <style>
-      h1,button {
-        text-align:center; 
-    }
-    body{
-      background-position: center top;
-    }
+      @import url('https://fonts.googleapis.com/css2?family=Ewert&family=Great+Vibes&family=Protest+Guerrilla&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+      h1, button, h4 {
+        text-align: center;
+        padding: 10px 20px;
+      }
+      body {
+        background-position: center top;
+      }
+
+      .great-vibes-regular {
+        font-family: "Great Vibes", cursive;
+        font-weight: 400;
+        font-style: normal;
+      }
+
+      .ewert-regular {
+        font-family: "Ewert", system-ui;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
+      
     </style>
   </head>
-  <body class='text-light' style="background-image: url('static/img/yin_yang.png')">
-    <h1>Assuntos do meu interesse</h1>
-    <div class="container">
-    <p class="d-inline-flex gap-1">
-        <a class="btn btn-primary ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Psicologia Analítica
-        </a>
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
-          I ching
-        </a>      
-        
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-          Flauta doce
-        </a>
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
-          Mandalas
-        </a>        
-      </p>
-      <div class="collapse text-light" id="collapseExample">
-        <div class="bg-dark card card-body">
-          Psicologia analítica, também conhecida como psicologia junguiana ou psicologia complexa, 
-          é um ramo de conhecimento e prática da Psicologia, iniciado por Carl Gustav Jung. Ela enfatiza 
-          a importância da psique, do inconsciente, dos arquétipos e do processo de individuação. 
-          Ela se distingue da psicanálise, iniciada por Freud, e da psicologia de Adler e seus contemporâneos, 
-          por uma noção diferenciada e abrangente da libido, a conceituação do inconsciente coletivo e o 
-          surgimento da função transcendente.
-          <img class="mt-3" src="static/img/psicologia_analitica.jpg" style="width: 300px; height: 200px;" alt="Psicologia Analítica">
-        </div>
-      </div>
+  <body class='text-light' style="background-image: url('{% static 'img/yin_yang.png' %}')">
+    <h1 class="ewert-regular">Sistema RB Soft</h1>
 
-      <div class="collapse text-light" id="collapseExample1">
-        <div class="bg-dark card card-body">
-          O Livro das Mutações ou Clássico das Mutações, é um texto clássico chinês composto de várias 
-          camadas sobrepostas ao longo do tempo é considerado um dos mais antigos e importantes livros 
-          de filosofia chinesa que chegaram até nossos dias. Originalmente um manual de adivinhação durante 
-          a Dinastia Zhou Ocidental (1000–750 AC), foi transformado, ao longo do período dos Estados Combatentes 
-          e o início do período imperial (500–200 AC), num texto cosmológico com uma série de comentários 
-          filosóficos conhecida como as "Dez Asas", (十翼 shí yì). Depois de se tornar parte dos cinco 
-          clássicos no século II AC, o I Ching foi objeto de comentários de estudiosos e a base para a 
-          prática de adivinhação por séculos no Oriente, tendo também um papel influente no entendimento 
-          do pensamento oriental pelo Ocidente.
-         
-          <img class="mt-3" src="static/img/iching.jpg" style="width: 300px; height: 200px;" alt="I Ching">
-        </div>
-      </div>
-
-      <div class="collapse text-light" id="collapseExample2">
-        <div class="bg-dark card card-body">
-          O instrumento mais antigo classificado como uma flauta, totalmente preservado, 
-          foi descoberto em um fosso de uma residência em Dordrecht, na Holanda, e atualmente 
-          está abrigado no Gemeentemuseum em Haia. Uma recente descoberta, publicada pela Universidade 
-          de Tuebingen, destaca o que pode ser considerado o instrumento mais antigo feito por um homem 
-          de Neandertal na Alemanha. Trata-se de uma flauta de osso com aproximadamente 42.000 anos. 
-          Embora haja evidências suficientes para confirmar a presença da flauta doce na Europa nas 
-          últimas décadas do século XIV, foi durante o século XV que o instrumento se consolidou, 
-          aparecendo de forma inequívoca em listas de compras de instrumentos, em representações 
-          visuais (pinturas, afrescos, tapeçarias) e em descrições presentes em diversos documentos.
-         
-          <img class="mt-3" src="static/img/flauta.jpg" style="width: 300px; height: 200px;" alt="Flauta doce">
-        </div>
-      </div>
-
-      <div class="collapse text-light" id="collapseExample3">
-        <div class="bg-dark card card-body">
-          É uma representação geométrica da dinâmica relação entre o 
-          homem e o cosmo. Refere-se a uma figura geométrica em que o círculo 
-          está circunscrito em um quadro ou o quadrado em um círculo. 
-          Essa figura possui ainda subdivisões, mais ou menos regulares, 
-          dividida por quatro ou múltiplos de quatro. Parecendo irradiada 
-          do centro ou se move para dentro dele, dependendo da perspectiva 
-          do indivíduo. Mandalas são utilizadas de modo esquemático e, 
-          ao mesmo tempo, pode ser entendida em certas tradições religiosas 
-          como um resumo da manifestação espacial do divino, uma “imagem do Mundo”. 
-          
-          <img class="mt-3" src="static/img/mandala.jpg" style="width: 300px; height: 200px;" alt="Mandala">
-         
-        </div>
-      </div>
-      </div>
-    
-      {% block content %}
-      {% endblock  %}
+    {% block content %}
+    {% endblock %}
   
-      {% include "teste/partials/_footer.html" %}
+    {% include "teste/partials/_footer.html" %}
   
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
