Adicionando ver pensamentos

--- a/templates/teste/pensamentos.html
+++ b/templates/teste/pensamentos.html
@@ -7,7 +7,12 @@
     <div class="container">
         <p class="d-inline-flex gap-1">
             <a class="btn btn-success ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                Digitar pensamento
+                Digitar Pensamentos
+            </a>
+        </p>
+        <p class="d-inline-flex gap-1">
+            <a class="btn btn-success ms-5" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+                Ver Pensamentos
             </a>
         </p>
 
@@ -31,6 +36,19 @@
                 <p>Clique em Salvar e registre seu pensamento ou sonho.</p>
             </div>
         </div>
+
+        <div class="collapse text-light" id="collapseExample1">
+            <div class="bg-dark card card-body">
+                <h1 class="great-vibes-regular">Pensamentos Registrados</h1>
+                <p>
+                    Pela manhã depois das 8h sentir-me grato pelo trabalho ...<br>
+                    De tarde tive uma idéia de um sistema de registros de pensamentos<br>
+                    o sistema irá guardar pensamentos e sonhos para possíveis consultas<br>
+                    ...
+                </p>
+            </div>
+        </div>
+
     </div>
 </p>
 {% endblock %}
