--- a/templates/teste/pensamentos.html
+++ b/templates/teste/pensamentos.html
@@ -11,7 +11,7 @@
             </a>
         </p>
         <p class="d-inline-flex gap-1">
-            <a class="btn btn-success ms-5" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+            <a class="btn btn-secondary ms-5" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
                 Ver Pensamentos
             </a>
         </p>
@@ -41,10 +41,18 @@
             <div class="bg-dark card card-body">
                 <h1 class="great-vibes-regular">Pensamentos Registrados</h1>
                 <p>
-                    Pela manhã depois das 8h sentir-me grato pelo trabalho ...<br>
+                   - Terça-feira 27/01/2024 20:09  - Pela manhã logo cedo sentir-me grato pelo vida ...<br>
                     De tarde tive uma idéia de um sistema de registros de pensamentos<br>
                     o sistema irá guardar pensamentos e sonhos para possíveis consultas<br>
-                    ...
+                    <hr>
+                    - Terça-feira 27/01/2024 20:09  - Pela manhã logo cedo sentir-me grato pelo vida ...<br>
+                    De tarde tive uma idéia de um sistema de registros de pensamentos<br>
+                    o sistema irá guardar pensamentos e sonhos para possíveis consultas<br>
+                    <hr>
+                    - Terça-feira 27/01/2024 20:09  - Pela manhã logo cedo sentir-me grato pelo vida ...<br>
+                    De tarde tive uma idéia de um sistema de registros de pensamentos<br>
+                    o sistema irá guardar pensamentos e sonhos para possíveis consultas<br>
+                    <hr>
                 </p>
             </div>
         </div>
