--- a/templates/teste/index.html
+++ b/templates/teste/index.html
@@ -4,7 +4,7 @@
 <h1 class="great-vibes-regular">Registro de Pensamentos e Sonhos</h1>
 <p class="ms-3">
     <div class="container">
-        <a style="text-decoration: none; color: #ffff" href="{% url 'pensamentos' %}">Registrar Pensamento</a><br><br>
+        <a style="text-decoration: none; color: #ffff" href="{% url 'registrar_humano' %}">Registrar Pensamento</a><br><br>
       <p class="d-inline-flex gap-1">
           <a class="btn btn-primary ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Psicologia Analítica
