Atualizando cor dos botoes

--- a/templates/teste/index.html
+++ b/templates/teste/index.html
@@ -6,17 +6,17 @@
     <div class="container">
         <a style="text-decoration: none; color: #ffff" href="{% url 'registrar_humano' %}">Registrar Pensamento</a><br><br>
       <p class="d-inline-flex gap-1">
-          <a class="btn btn-primary ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <a class="btn btn-warning ms-5" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Psicologia Analítica
           </a>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+          <a class="btn btn-dark" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
             I ching
           </a>      
           
           <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
             Flauta doce
           </a>
-          <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
+          <a class="btn btn-light" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
             Mandalas
           </a>        
         </p>
